# phiengine

./: ACQUISITION_PACK_README.md  BENCHMARKS.md  CHANGELOG.md  FINAL_UPDATE_SUMMARY.md  INDEX.md  LARGE_SCALE_VALIDATION_UPDATES.md  LICENSE  Latest Updated Master Documentation  MANIFEST.md  OPENAI_SIMULATION_RESULTS.md  PACKAGE_MANIFEST.md  PACKAGE_READY_DOWNLOAD_HERE.md  QUICK_START.md  README.md  REAL_DATA_ANALYSIS.md  REAL_DATA_SUMMARY.txt  REPOSITORY_DOCUMENTATION_SUMMARY.md  REVIEW_SUMMARY.txt  START_HERE.md  TECHNICAL_SUMMARY.md  TEST_REVIEW.md  TEST_SUMMARY.txt  VERIFICATION_CHECKLIST.md  __init__.py  example_embeddings_phase1.py  example_embeddings_phase2.py  example_text_compression.py  phi_engine_master.py  pyproject.toml
test/: __init__.py  sample_text.txt  test_compress_decompress.py
